delete contract + some fixe refactoring
